--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -7,7 +7,8 @@
 main:
 
   - title: "CV"
-    url: /cv/
+    # url: /cv/
+    url: /files/Academic_CV.pdf
 
   - title: "Publications"
     # url: /publications/
