--- a/_config.yml
+++ b/_config.yml
@@ -12,9 +12,9 @@ title                    : "Jorge's Homepage"
 title_separator          : "-"
 name                     : &name "Jorge García Ponce"
 description              : &description "Undergraduate at Harvard University | Class of 2025"
-url                      : https://jorgegponce.github.io # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io"
+url                      : https://jorgegarciaponce.github.io # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "jorgegponce/jorgegponce.github.io"
+repository               : "jorgegponce/jorgegarciaponce.github.io"
 
 # Site Author - The following control what appear as part of the author content on the side bar.
 #               If a field is blank the icon and link will not appear, otherwise it will be shown.
