adds google verification file

--- a/_config.yml
+++ b/_config.yml
@@ -156,6 +156,7 @@ include:
   - .htaccess
   - _pages
   - files
+  - google1234567890abcdef.html
 exclude:
   - "*.sublime-project"
   - "*.sublime-workspace"
